# neotec_insight_ai

./: MANIFEST.in  README.md  license.txt
docs/: date-filtering.md
neotec_insight_ai/: README.md  __init__.py  api.py  hooks.py  install.py  modules.txt  pyproject.toml  requirements.txt
neotec_insight_ai/neotec_insight_ai/: api.py  install.py
neotec_insight_ai/neotec_insight_ai/doctype/insight_settings/: insight_settings.json  insight_settings.py
neotec_insight_ai/neotec_insight_ai/doctype/neotec_ai_report/: neotec_ai_report.json
neotec_insight_ai/neotec_insight_ai/doctype/neotec_ai_report_dimension/: neotec_ai_report_dimension.json  neotec_ai_report_dimension.py
neotec_insight_ai/neotec_insight_ai/neotec_insight_ai/doctype/neotec_ai_report/: neotec_ai_report.py
neotec_insight_ai/neotec_insight_ai/neotec_insight_ai/page/insight/: insight.json
neotec_insight_ai/neotec_insight_ai/page/insight/: insight.js
neotec_insight_ai/neotec_insight_ai/public/insight/: app.html  i18n.ar.json
neotec_insight_ai/neotec_insight_ai/translations/: ar.csv
neotec_insight_ai/neotec_insight_ai/workspace/neotec_insight_ai/: neotec_insight_ai.json
neotec_insight_ai/public/insight/: app.html
