[project]
name = "neotec_insight_ai"
authors = [{ name = "Neotec", email = "info@neotec.ai" }]
description = "Neotec Insight AI — financial analysis cockpit for ERPNext with a local-first AI analyst (NeoNexus). Period/Dimension/Years/Combo views on every report, per-report dimension provisioning, variance & ratio analysis, bilingual EN/AR."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]

[tool.ruff]
line-length = 110
target-version = "py310"
[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = ["E501", "E741", "F401", "F403", "F405", "W191"]
